# ludo-rd-client

./: .gitignore  README.md  gradlew  settings.gradle
.github/workflows/: build-hook.yml  build.yml  patch-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rohan/ludordclient/: LauncherActivity.kt  MainActivity.kt  ModConfig.kt  ModConnection.kt  ModuleAdapter.kt  ModuleItem.kt
app/src/main/res/layout/: activity_main.xml  item_module.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
hook/: CMakeLists.txt  customize.sh  module.prop
hook/src/: main.cpp  zygisk.hpp
scripts/: inject.py
